sass/content-form-theme.scss
/**
 * @file
 * Styles for content forms.
 */

@import 'variables';

.content-form__advanced-toggle,
.content-form__advanced {
  background: $primary-color-darker;
}

.content-form__advanced-toggle {
  border: 0;
  color: white;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  padding-bottom: 1em;

  &:focus,
  &:active {
    box-shadow: none;
    outline: none;
  }

  &:hover {
    background: $primary-color-darkest;

    svg {
      path {
        fill: $primary-color-intense;
      }
    }
  }
}

.content-form__actions {
  z-index: 101;

  .button--danger {
    margin: 0;
    text-transform: none;
    color: $gray-light;
    font-size: 14px;
    font-weight: bold;
  }
}

@include for-tablet-portrait-and-up {
  /* Fixed action bar */
  .content-form__actions {
    background: $primary-color-darker;
  }
}

.content-form__main > fieldset,
fieldset.content-form__form-section {
  background: $primary-color-lightest;
  border-radius: $base-border-radius;
  padding-top: 2.5rem;

  & > legend {
    padding-left: 0.4em;
    text-transform: none;
    font-size: 1rem;
    border-left: 5px solid $primary-color-intense;
    top: 1rem;
  }

  .field-multiple-table {
    thead {
      tr {
        border: 0;

        &:hover {
          background: transparent;
        }

        th {
          background: transparent;
          color: $gray-medium;
          border: 0;
        }
      }
    }

    tbody {
      tr {
        border-bottom-color: $primary-color-lighter;

        &.draggable {
          background: transparent;

          &:hover {
            background: $primary-color-lighter;
          }
          &.drag {
            background: $primary-color-lighter-2;

            .field-multiple-drag {
              .tabledrag-handle {
                .handle {
                  background-image: url(../images/icons/move--primary-blue.svg);
                }
              }
            }
          }
        }

        &.drag-previous {
          background: transparent;
        }
      }
    }

    .field-multiple-drag {
      position: relative;
      width: 58px;
      vertical-align: top;
      text-align: center;
      box-sizing: border-box;

      @include for-tablet-landscape-and-up {
        vertical-align: middle;
      }

      .js & {
        .tabledrag-changed {
          position: absolute;
          left: 0;
          top: 0;
          width: 5px;
          height: 100%;
          font-size: 0;
          background: #e09600;
        }

        .tabledrag-handle {
          display: inline-block;
          height: 1.5em;
          float: none;

          .handle {
            margin-left: 5px;
            background: url(../images/icons/move.svg) no-repeat center center;

            @include for-tablet-portrait-and-up {
              margin-left: 2px;
            }
          }
        }
      }
    }

  }
}

.entity-meta--advanced {
  background: transparent;
  border: 0;
  box-shadow: none;
  font-size: 0.75rem;
  margin: $base-space $base-space-2x;

  .entity-meta__header,
  details {
    background: transparent;
    border-top: 0;
    border-bottom: 0;
    box-shadow: none;
  }

  .entity-meta__title {
    text-shadow: none;
  }

  details {
    border-top: 2px solid $primary-color-dark;
    border-bottom: 2px solid $primary-color-dark;

    & + details {
      border-top: 0;
    }

    &[open] {
      background-image: none;
      border-top-width: 2px;
    }

    & > summary {
      text-shadow: none;
      font-size: 0.875rem;
    }
  }

}

